--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ __pycache__
 vigor.egg-info/
 archive/
 .DS_Store
+notebooks/graph_data.csv
+notebooks/.ipynb_checkpoints/evaluation-brian-checkpoint.ipynb
